--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <div id="quiz" style="display: none">
       <p id="questionText"></p>
       <ul id="answers"></ul>
+      <div id="leaderboard" style="margin-top: 20px;"></div>
       <button id="nextBtn" style="display: none">Další otázka</button>
     </div>
 
@@ -40,3 +41,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
